--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,7 @@
     <style>
         body {
             background-color: pink !important;
+            margin: 40px;
         }
     </style>
 </html>
