--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 
     <style>
         body {
-            background-color: #fafafa !important;
+            background-color: pink !important;
             margin: 40px;
         }
     </style>
